Remove line-height to fix vertical alignment of icon;

--- a/pattern-library/src/scss/specialised/_icon-block.scss
+++ b/pattern-library/src/scss/specialised/_icon-block.scss
@@ -9,7 +9,6 @@
   border-radius: 50%;
   color: $upd-color-text-reverse;
   display: inline-block;
-  line-height: 1;   /* 2 */
   padding: $padding;
   text-align: center;
   vertical-align: middle;
